--- a/app/src/main/res/layout/fragment_qnn_ard.xml
+++ b/app/src/main/res/layout/fragment_qnn_ard.xml
@@ -35,7 +35,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <ProgressBar
                     android:id="@+id/myProgressBar"
@@ -45,6 +45,90 @@
                     android:indeterminate="true"
                     android:indeterminateBehavior="cycle"
                     android:visibility="gone" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/hergeli"
+                        android:layout_width="match_parent"
+                        android:layout_height="31dp" />
+
+                    <TextView
+                        android:id="@+id/textView31"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Քննությունների արդյունքներ"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TableLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="408dp"
+                        android:sriv_border_color="#8bc34a"
+                        android:sriv_border_width="2dp"
+                        android:sriv_oval="true">
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:id="@+id/textView34"
+                                android:layout_width="167dp"
+                                android:layout_height="wrap_content"
+                                android:padding="5dp"
+                                android:text="Առարկա"
+                                android:textColor="@android:color/background_dark"
+                                android:textSize="18sp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/textView33"
+                                android:layout_width="207dp"
+                                android:layout_height="wrap_content"
+                                android:lineSpacingExtra="8sp"
+                                android:padding="5dp"
+                                android:text="գնահատական"
+                                android:textColor="@android:color/background_dark"
+                                android:textSize="18sp"
+                                android:textStyle="bold" />
+                        </TableRow>
+
+                    </TableLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView13"
+                            android:layout_width="69dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                        <TextView
+                            android:id="@+id/textView15"
+                            android:layout_width="216dp"
+                            android:layout_height="48dp"
+                            android:text="ՊՐՈՖԱՅԹԻ ՈՒՍՈՒՄՆԱԿԱՆ ԿԵՆՏՐՈՆ\n       © ԱՐՄԵՆ ՄԱՐՋԻՆՅԱՆ"
+                            android:textAllCaps="false"
+                            android:textColor="@android:color/background_dark"
+                            android:textSize="8sp"
+                            android:textStyle="italic"
+                            android:typeface="monospace" />
+
+                        <TextView
+                            android:id="@+id/textView16"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+                    </LinearLayout>
+
+                </LinearLayout>
 
 
             </LinearLayout>
