--- a/app/src/main/res/layout/fragment_tester.xml
+++ b/app/src/main/res/layout/fragment_tester.xml
@@ -35,7 +35,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <ProgressBar
                     android:id="@+id/myProgressBar"
@@ -45,6 +45,104 @@
                     android:indeterminate="true"
                     android:indeterminateBehavior="cycle"
                     android:visibility="gone" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView21"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="    ԱՌԿԱ ԹԵՍՏԵՐԸ"
+                        android:textColor="@android:color/background_dark"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView36"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
+                        android:background="@color/colorAccent"
+                        android:padding="5dp"
+                        android:text="   Ցանկանու՞մ եք բարձրացնել Ձեր ռեյտինգը, ընտրե՛ք թեստը, անցեք այն և արդյունքը կանդրադառնա Ձեր ռեյտինգի վրա:"
+                        android:textColor="@android:color/background_light"
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
+
+                    <TableLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="330dp">
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:id="@+id/textView39"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="5dp"
+                                android:text="ԹԵՍՏԻ ԱՆՎԱՆՈՒՄԸ"
+                                android:textColor="@android:color/background_dark"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:id="@+id/textView38"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="5dp"
+                                android:text="ԹԵՍՏԻ ԲԱՐԴՈՒԹՅՈՒՆԸ"
+                                android:textColor="@android:color/background_dark"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:id="@+id/textView37"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:padding="5dp"
+                                android:text="ԱՐԴՅՈՒՆՔԸ"
+                                android:textColor="@android:color/background_dark"
+                                android:textSize="12sp" />
+                        </TableRow>
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
+                    </TableLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView13"
+                            android:layout_width="69dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                        <TextView
+                            android:id="@+id/textView15"
+                            android:layout_width="216dp"
+                            android:layout_height="48dp"
+                            android:text="ՊՐՈՖԱՅԹԻ ՈՒՍՈՒՄՆԱԿԱՆ ԿԵՆՏՐՈՆ\n       © ԱՐՄԵՆ ՄԱՐՋԻՆՅԱՆ"
+                            android:textAllCaps="false"
+                            android:textColor="@android:color/background_dark"
+                            android:textSize="8sp"
+                            android:textStyle="italic"
+                            android:typeface="monospace" />
+
+                        <TextView
+                            android:id="@+id/textView16"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+                    </LinearLayout>
+                </LinearLayout>
+
 
 
             </LinearLayout>
