--- a/app/src/main/res/layout/fragment_tester.xml
+++ b/app/src/main/res/layout/fragment_tester.xml
@@ -84,6 +84,7 @@
                                 android:id="@+id/textView39"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:background="?attr/colorControlHighlight"
                                 android:padding="5dp"
                                 android:text="ԹԵՍՏԻ ԱՆՎԱՆՈՒՄԸ"
                                 android:textColor="@android:color/background_dark"
@@ -93,6 +94,7 @@
                                 android:id="@+id/textView38"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:background="?attr/colorControlHighlight"
                                 android:padding="5dp"
                                 android:text="ԹԵՍՏԻ ԲԱՐԴՈՒԹՅՈՒՆԸ"
                                 android:textColor="@android:color/background_dark"
@@ -102,6 +104,7 @@
                                 android:id="@+id/textView37"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:background="?attr/colorControlHighlight"
                                 android:padding="5dp"
                                 android:text="ԱՐԴՅՈՒՆՔԸ"
                                 android:textColor="@android:color/background_dark"
