--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -50,18 +50,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
-                    <!--<ImageView-->
-                    <!--android:id="@+id/userImage"-->
-                    <!--android:layout_width="100dp"-->
-                    <!--android:layout_height="100dp"-->
-                    <!--android:contentDescription="@string/nav_header_desc"-->
-                    <!--/>-->
-                    <!---->
+
                     <com.joooonho.SelectableRoundedImageView
                         android:id="@+id/userImage"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
-                        android:layout_gravity="center"
+                        android:layout_gravity="left"
                         android:scaleType="centerCrop"
                         app:sriv_border_color="#8bc34a"
                         app:sriv_border_width="2dp"
@@ -80,6 +74,18 @@
                             android:layout_marginTop="@dimen/activity_vertical_margin"
                             android:textColor="@color/colorAccent" />
 
+                        <ListView
+                            android:id="@+id/lists"
+                            android:layout_width="match_parent"
+                            android:layout_height="79dp" />
+                        <!--<TextView-->
+                            <!--android:id="@+id/orer"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:layout_marginLeft="@dimen/bottom_ellipsis_height"-->
+                            <!--android:layout_marginTop="@dimen/default_padding_top"-->
+                            <!--android:text="or" />-->
+
                         <TextView
                             android:id="@+id/xumbAnd"
                             android:layout_width="match_parent"
@@ -95,16 +101,8 @@
                             android:layout_marginLeft="@dimen/bottom_ellipsis_height"
                             android:layout_marginTop="@dimen/activity_vertical_margin"
                             android:text="Դասացուցակ"
-                            android:textColor="@color/colorAccent"
+                            android:textColor="@android:color/background_dark"
                             android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/orer"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/bottom_ellipsis_height"
-                            android:layout_marginTop="@dimen/default_padding_top"
-                            android:text="or" />
 
                         <TextView
                             android:id="@+id/textView32"
@@ -113,16 +111,27 @@
                             android:layout_marginLeft="@dimen/bottom_ellipsis_height"
                             android:layout_marginTop="@dimen/activity_vertical_margin"
                             android:text="Դասավանդող"
-                            android:textColor="@color/colorAccent"
+                            android:textColor="@android:color/background_dark"
                             android:textStyle="bold" />
 
+                        <com.joooonho.SelectableRoundedImageView
+                            android:id="@+id/teacherImage"
+                            android:layout_width="47dp"
+                            android:layout_height="47dp"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="-20dp"
+                            android:scaleType="centerCrop"
+                            app:sriv_border_color="#8bc34a"
+                            app:sriv_border_width="2dp"
+                            app:sriv_oval="true" />
                         <TextView
-                            android:id="@+id/teacher"
+                            android:id="@+id/teacherNandS"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/bottom_ellipsis_height"
                             android:layout_marginTop="@dimen/inner_components_spacing"
                             android:text="teacher" />
+
                     </LinearLayout>
 
                 </LinearLayout>
