--- a/app/src/main/res/layout/fragment_kargavorumner.xml
+++ b/app/src/main/res/layout/fragment_kargavorumner.xml
@@ -75,7 +75,7 @@
                         <!--android:id="@+id/imageView"-->
                         <!--android:layout_width="208dp"-->
                         <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_weight="1"-->
+                        <!--android:layout_weight="img1"-->
                         <!--app:srcCompat="@drawable/placeholder" />-->
 
                         <LinearLayout
