--- a/app/src/main/res/layout/fragment_books.xml
+++ b/app/src/main/res/layout/fragment_books.xml
@@ -56,7 +56,7 @@
                     android:layout_margin="@dimen/bottom_text_size"
                     android:background="#973baa"
                     android:padding="@dimen/activity_vertical_margin"
-                    android:text="JavaScript ծրագրավորման լեզվի տարրերը "
+                    android:text="@string/javascripts"
                     android:textColor="@android:color/background_light"
                     android:textSize="14sp"
                     android:textStyle="bold" />
@@ -66,14 +66,14 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/userImages"
+                    <com.joooonho.SelectableRoundedImageView
+                        android:id="@+id/imageView"
                         android:layout_width="140dp"
-                        android:layout_height="140dp"
-                        android:contentDescription="@string/nav_header_desc"
-                        android:paddingTop="@dimen/nav_header_vertical_spacing"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        app:srcCompat="@mipmap/book2" />
+                        android:layout_height="240dp"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:scaleType="centerCrop"
+                        android:src="@mipmap/book2" />
 
                     <TextView
                         android:id="@+id/textView41"
@@ -87,7 +87,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
+                    android:layout_margin="8dp"
                     android:text="@string/javascript"
                     android:textAllCaps="false" />
 
@@ -114,106 +114,115 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/i"
-                        android:layout_width="186dp"
+                    <com.joooonho.SelectableRoundedImageView
+                        android:id="@+id/nkmek"
+                        android:layout_width="120dp"
                         android:layout_height="140dp"
-                        android:contentDescription="@string/nav_header_desc"
-                        android:paddingTop="@dimen/nav_header_vertical_spacing"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        app:srcCompat="@mipmap/nkarajin" />
+                        android:layout_weight="1"
+                        android:layout_margin="10dp"
+                        android:scaleType="centerCrop"
+                        android:src="@mipmap/nkmek" />
 
-                    <ImageView
-                        android:id="@+id/i1"
-                        android:layout_width="182dp"
+                    <com.joooonho.SelectableRoundedImageView
+                        android:id="@+id/nkerku"
+                        android:layout_width="120dp"
                         android:layout_height="140dp"
-                        android:contentDescription="@string/nav_header_desc"
-                        android:paddingTop="@dimen/nav_header_vertical_spacing"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        app:srcCompat="@mipmap/nkerkrord" />
+                        android:layout_weight="1"
+                        android:layout_margin="10dp"
+                        android:scaleType="centerCrop"
+                        android:src="@mipmap/nkerku" />
+
+
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/i3"
-                        android:layout_width="186dp"
-                        android:layout_height="140dp"
-                        android:contentDescription="@string/nav_header_desc"
-                        android:paddingTop="@dimen/nav_header_vertical_spacing"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        app:srcCompat="@mipmap/nkerrord" />
 
-                    <ImageView
-                        android:id="@+id/i13"
-                        android:layout_width="182dp"
+                    <com.joooonho.SelectableRoundedImageView
+                        android:id="@+id/nkereq"
+                        android:layout_width="120dp"
                         android:layout_height="140dp"
-                        android:contentDescription="@string/nav_header_desc"
-                        android:paddingTop="@dimen/nav_header_vertical_spacing"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        app:srcCompat="@mipmap/nkchorord" />
+                        android:layout_weight="1"
+                        android:layout_margin="10dp"
+                        android:scaleType="centerCrop"
+                        android:src="@mipmap/nkereq" />
+
+                    <com.joooonho.SelectableRoundedImageView
+                        android:id="@+id/nkchors"
+                        android:layout_width="120dp"
+                        android:layout_height="140dp"
+                        android:layout_weight="1"
+                        android:layout_margin="10dp"
+                        android:scaleType="centerCrop"
+                        android:src="@mipmap/nkchors" />
+
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/i4"
-                        android:layout_width="186dp"
+                    <com.joooonho.SelectableRoundedImageView
+                        android:id="@+id/nkhing"
+                        android:layout_width="120dp"
                         android:layout_height="140dp"
-                        android:contentDescription="@string/nav_header_desc"
-                        android:paddingTop="@dimen/nav_header_vertical_spacing"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        app:srcCompat="@mipmap/nkhingerrord" />
+                        android:layout_weight="1"
+                        android:layout_margin="10dp"
+                        android:scaleType="centerCrop"
+                        android:src="@mipmap/nkhing" />
 
-                    <ImageView
-                        android:id="@+id/ij4"
-                        android:layout_width="182dp"
+                    <com.joooonho.SelectableRoundedImageView
+                        android:id="@+id/nkvec"
+                        android:layout_width="120dp"
                         android:layout_height="140dp"
-                        android:contentDescription="@string/nav_header_desc"
-                        android:paddingTop="@dimen/nav_header_vertical_spacing"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        app:srcCompat="@mipmap/nkvecerrord" />
+                        android:layout_weight="1"
+                        android:layout_margin="10dp"
+                        android:scaleType="centerCrop"
+                        android:src="@mipmap/nkvec" />
+
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/i5"
-                        android:layout_width="186dp"
+                    <com.joooonho.SelectableRoundedImageView
+                        android:id="@+id/nkyot"
+                        android:layout_width="120dp"
                         android:layout_height="140dp"
-                        android:contentDescription="@string/nav_header_desc"
-                        android:paddingTop="@dimen/nav_header_vertical_spacing"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        app:srcCompat="@mipmap/nkjoterrord" />
+                        android:layout_weight="1"
+                        android:layout_margin="10dp"
+                        android:scaleType="centerCrop"
+                        android:src="@mipmap/nkyot" />
 
-                    <ImageView
-                        android:id="@+id/i15"
-                        android:layout_width="182dp"
+                    <com.joooonho.SelectableRoundedImageView
+                        android:id="@+id/nkut"
+                        android:layout_width="120dp"
                         android:layout_height="140dp"
-                        android:contentDescription="@string/nav_header_desc"
-                        android:paddingTop="@dimen/nav_header_vertical_spacing"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        app:srcCompat="@mipmap/nkuterrord" />
+                        android:layout_weight="1"
+                        android:layout_margin="10dp"
+                        android:scaleType="centerCrop"
+                        android:src="@mipmap/nkut" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/i9"
-                        android:layout_width="wrap_content"
+
+                    <com.joooonho.SelectableRoundedImageView
+                        android:id="@+id/nkin"
+                        android:layout_width="120dp"
                         android:layout_height="140dp"
-                        android:contentDescription="@string/nav_header_desc"
-                        android:paddingTop="@dimen/nav_header_vertical_spacing"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                        app:srcCompat="@mipmap/nkinerrord" />
+                        android:layout_marginLeft="100dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="100dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_weight="1"
+                        android:scaleType="centerCrop"
+                        android:src="@mipmap/nkin" />
 
                 </LinearLayout>
                 <LinearLayout
