--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -194,6 +194,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <LinearLayout
                         android:layout_width="220dp"
                         android:layout_height="wrap_content"
@@ -238,10 +239,26 @@
                                 android:textColor="@android:color/background_dark"
                                 android:textStyle="bold" />
 
-                            <ListView
-                                android:id="@+id/lists"
+                            <LinearLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="158dp" />
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                                <ListView
+                                    android:id="@+id/listDay"
+                                    android:layout_width="100dp"
+                                    android:layout_height="120dp" />
+
+                                <ListView
+                                    android:id="@+id/listStart"
+                                    android:layout_width="60dp"
+                                    android:layout_height="120dp" />
+
+                                <ListView
+                                    android:id="@+id/listEnd"
+                                    android:layout_width="60dp"
+                                    android:layout_height="120dp" />
+                            </LinearLayout>
 
                             <TextView
                                 android:id="@+id/textView32"
