--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -121,22 +121,22 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
                     <LinearLayout
-                        android:layout_width="220dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:orientation="vertical">
 
                         <LinearLayout
-                            android:layout_width="232dp"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
+                            android:layout_width="220dp"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
 
-                            <!--<TextView-->
+                            <LinearLayout
+                                android:layout_width="232dp"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical">
+
+                                <!--<TextView-->
                                 <!--android:id="@+id/xumb"-->
                                 <!--android:layout_width="match_parent"-->
                                 <!--android:layout_height="wrap_content"-->
@@ -144,15 +144,15 @@
                                 <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
                                 <!--android:textColor="@color/colorAccent" />-->
 
-                            <!--&lt;!&ndash;<TextView&ndash;&gt;-->
-                            <!--&lt;!&ndash;android:id="@+id/orer"&ndash;&gt;-->
-                            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
-                            <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
-                            <!--&lt;!&ndash;android:layout_marginLeft="@dimen/bottom_ellipsis_height"&ndash;&gt;-->
-                            <!--&lt;!&ndash;android:layout_marginTop="@dimen/default_padding_top"&ndash;&gt;-->
-                            <!--&lt;!&ndash;android:text="or" />&ndash;&gt;-->
+                                <!--&lt;!&ndash;<TextView&ndash;&gt;-->
+                                <!--&lt;!&ndash;android:id="@+id/orer"&ndash;&gt;-->
+                                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
+                                <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
+                                <!--&lt;!&ndash;android:layout_marginLeft="@dimen/bottom_ellipsis_height"&ndash;&gt;-->
+                                <!--&lt;!&ndash;android:layout_marginTop="@dimen/default_padding_top"&ndash;&gt;-->
+                                <!--&lt;!&ndash;android:text="or" />&ndash;&gt;-->
 
-                            <!--<TextView-->
+                                <!--<TextView-->
                                 <!--android:id="@+id/xumbAnd"-->
                                 <!--android:layout_width="347dp"-->
                                 <!--android:layout_height="wrap_content"-->
@@ -160,74 +160,76 @@
                                 <!--android:layout_marginTop="@dimen/default_padding_top"-->
                                 <!--android:text="ցուցակ" />-->
 
-                            <TextView
-                                android:id="@+id/textView29"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/bottom_ellipsis_height"
-                                android:layout_marginTop="@dimen/activity_vertical_margin"
-                                android:text="Դասացուցակ"
-                                android:textColor="@android:color/background_dark"
-                                android:textStyle="bold" />
+                                <TextView
+                                    android:id="@+id/textView29"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="@dimen/bottom_ellipsis_height"
+                                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                                    android:text="Դասացուցակ"
+                                    android:textColor="@android:color/background_dark"
+                                    android:textStyle="bold" />
 
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="horizontal">
 
-                                <ListView
-                                    android:id="@+id/listDay"
-                                    android:layout_width="98dp"
-                                    android:layout_height="95dp" />
+                                    <ListView
+                                        android:id="@+id/listDay"
+                                        android:layout_width="98dp"
+                                        android:layout_height="95dp" />
 
-                                <ListView
-                                    android:id="@+id/listStart"
-                                    android:layout_width="60dp"
-                                    android:layout_height="95dp" />
+                                    <ListView
+                                        android:id="@+id/listStart"
+                                        android:layout_width="60dp"
+                                        android:layout_height="95dp" />
 
-                                <ListView
-                                    android:id="@+id/listEnd"
-                                    android:layout_width="60dp"
-                                    android:layout_height="95dp" />
+                                    <ListView
+                                        android:id="@+id/listEnd"
+                                        android:layout_width="60dp"
+                                        android:layout_height="95dp" />
+                                </LinearLayout>
+
+                                <TextView
+                                    android:id="@+id/textView32"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="@dimen/bottom_ellipsis_height"
+                                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                                    android:text="Դասավանդող"
+                                    android:textColor="@android:color/background_dark"
+                                    android:textStyle="bold" />
+
+                                <com.joooonho.SelectableRoundedImageView
+                                    android:id="@+id/teacherImage"
+                                    android:layout_width="47dp"
+                                    android:layout_height="47dp"
+                                    android:layout_gravity="center"
+                                    android:layout_marginLeft="-60dp"
+                                    android:scaleType="centerCrop"
+                                    app:sriv_border_color="#8bc34a"
+                                    app:sriv_border_width="2dp"
+                                    app:sriv_oval="true" />
+
+                                <TextView
+                                    android:id="@+id/teacherNandS"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="@dimen/bottom_ellipsis_height"
+                                    android:layout_marginTop="@dimen/inner_components_spacing" />
+
                             </LinearLayout>
-
-                            <TextView
-                                android:id="@+id/textView32"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/bottom_ellipsis_height"
-                                android:layout_marginTop="@dimen/activity_vertical_margin"
-                                android:text="Դասավանդող"
-                                android:textColor="@android:color/background_dark"
-                                android:textStyle="bold" />
-
-                            <com.joooonho.SelectableRoundedImageView
-                                android:id="@+id/teacherImage"
-                                android:layout_width="47dp"
-                                android:layout_height="47dp"
-                                android:layout_gravity="center"
-                                android:layout_marginLeft="-60dp"
-                                android:scaleType="centerCrop"
-                                app:sriv_border_color="#8bc34a"
-                                app:sriv_border_width="2dp"
-                                app:sriv_oval="true" />
-
-                            <TextView
-                                android:id="@+id/teacherNandS"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="@dimen/bottom_ellipsis_height"
-                                android:layout_marginTop="@dimen/inner_components_spacing" />
-
                         </LinearLayout>
                     </LinearLayout>
-                </LinearLayout>
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <TextView
                         android:id="@+id/xumb"
                         android:layout_width="match_parent"
@@ -235,6 +237,7 @@
                         android:layout_marginLeft="@dimen/bottom_ellipsis_height"
                         android:layout_marginTop="@dimen/activity_vertical_margin"
                         android:textColor="@color/colorAccent" />
+
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -250,23 +253,46 @@
                             android:layout_width="84dp"
                             android:layout_height="211dp" />
 
-                    <ListView
-                        android:id="@+id/xumbStRating"
-                        android:layout_width="77dp"
-                        android:layout_height="211dp" />
-                    <ListView
-                        android:id="@+id/xumbStImg"
-                        android:layout_width="wrap_content"
-                        android:layout_height="211dp" />
+                        <ListView
+                            android:id="@+id/xumbStRating"
+                            android:layout_width="77dp"
+                            android:layout_height="211dp" />
+
+                        <ListView
+                            android:id="@+id/xumbStImg"
+                            android:layout_width="wrap_content"
+                            android:layout_height="211dp" />
                     </LinearLayout>
 
-                    <!--<TextView-->
-                    <!--android:id="@+id/xumbAnd"-->
-                    <!--android:layout_width="347dp"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginLeft="@dimen/bottom_ellipsis_height"-->
-                    <!--android:layout_marginTop="@dimen/default_padding_top"-->
-                    <!--android:text="ցուցակ" />-->
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView13"
+                        android:layout_width="69dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                    <TextView
+                        android:id="@+id/textView15"
+                        android:layout_width="216dp"
+                        android:layout_height="48dp"
+                        android:text="ՊՐՈՖԱՅԹԻ ՈՒՍՈՒՄՆԱԿԱՆ ԿԵՆՏՐՈՆ\n       © ԱՐՄԵՆ ՄԱՐՋԻՆՅԱՆ"
+                        android:textAllCaps="false"
+                        android:textColor="@android:color/background_dark"
+                        android:textSize="8sp"
+                        android:textStyle="italic"
+                        android:typeface="monospace" />
+
+                    <TextView
+                        android:id="@+id/textView16"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
                 </LinearLayout>
             </LinearLayout>
 
