--- a/app/src/main/res/layout/st_name.xml
+++ b/app/src/main/res/layout/st_name.xml
@@ -31,7 +31,7 @@
             android:text="TextView"
             android:textSize="20sp"/>
         <TextView
-            android:id="@+id/stSurame"
+            android:id="@+id/stSurname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
